# oshinko-temaki

./: AUTHORS  CONTRIBUTING  ChangeLog  README.md  setup.cfg  tox.ini
oshinko_temaki/: cli.py  configs.py  templates.py
tests/: test_templates.py
