[metadata]
name = oshinko_temaki
license = Apache-2
version = 0.1.0
description-file = README.md
summary = a tool for hand rolling Apache Spark clusters
homepage = https://github.com/elmiko/oshinko-temaki
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    oshinko_temaki

[entry_points]
console_scripts =
    osh = oshinko_temaki.cli:main
