[metadata]
name = oshinko_temaki
license = Apache-2
description-file = README.md
long_description_content_type = text/markdown; charset=UTF-8
summary = a tool for hand rolling Apache Spark clusters
url = https://github.com/elmiko/oshinko-temaki
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    oshinko_temaki

[entry_points]
console_scripts =
    osht = oshinko_temaki.cli:main
    oshinko-temaki = oshinko_temaki.cli:main
